--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "tyrian-geo-survey",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@types/jquery": "^3.3.0",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-redux": "^5.0.6",
-        "react-scripts": "1.1.0",
-        "redux": "^3.7.2"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "devDependencies": {
-        "redux-devtools": "^3.4.1"
-    }
+  "name": "tyrian-geo-survey",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/jquery": "^3.3.0",
+    "@types/material-ui": "^0.20.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
+  }
 }
