--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "tyrian-geo-survey",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jquery": "^3.3.0",
-    "@types/material-ui": "^0.20.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-scripts": "1.1.0",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "@types/leaflet": "^1.2.6",
+    "@types/react-leaflet": "^1.1.5",
+    "@types/react-redux": "^5.0.15",
+    "leaflet": "^1.3.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-leaflet": "^1.9.1",
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "2.14.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "redux-devtools": "^3.4.1"
+    "@types/enzyme": "^3.1.9",
+    "@types/jest": "^22.2.2",
+    "@types/node": "^9.6.2",
+    "@types/react": "^16.3.5",
+    "@types/react-dom": "^16.0.4",
+    "enzyme": "^3.3.0",
+    "react-addons-test-utils": "^15.6.2",
+    "typescript": "^2.8.1"
   }
 }
